<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.CategoryActivity">
    <item
        android:id="@+id/action_sale_tracker"
        android:orderInCategory="50"
        android:title="@string/sale_tracker"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_category"
        android:icon="@drawable/ic_add_white"
        android:orderInCategory="300"
        android:title="@string/add_category"
        app:showAsAction="always" />

    <item
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="400"
        android:id="@+id/action_search"
        app:showAsAction="always" />
</menu>
