<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

<include android:id="@+id/toolbar" layout="@layout/tool_bar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerName"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:hint="@string/enter_your_fullname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/registerPhone"
        android:layout_margin="10dp"
        android:hint="@string/mobile_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_margin="10dp"
        android:id="@+id/registerEmail"
        android:hint="@string/email_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerDescribe"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/describe_your_store"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_me"
        android:id="@+id/register"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/registerResponse"/>


</LinearLayout>