<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackerkernel.storemanager.fragment.NonListedProductFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:id="@+id/layout">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/TextLabel"
                    android:id="@+id/customerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name" />
            </android.support.design.widget.TextInputLayout>

            <!-- Product info container -->
            <Button
                android:layout_below="@id/layoutCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_more"
                android:id="@+id/addMoreFields"
                android:background="@drawable/primary_button"
                android:textColor="@color/iconColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_alignTop="@+id/addMoreFields"
                android:layout_toRightOf="@+id/addMoreFields"
                android:layout_toEndOf="@+id/addMoreFields"
                android:background="@drawable/white_button"
                android:textColor="@color/primaryColor"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_below="@id/addMoreFields"
                android:orientation="vertical">

                <TableLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:padding="3dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/product_name" />

                        <EditText />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:padding="3dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/size" />

                        <EditText android:inputType="number" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:padding="3dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/quantity" />

                        <EditText android:inputType="number" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:padding="3dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/cost_price" />

                        <EditText android:inputType="number" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:padding="3dp"
                            android:textColor="@color/primaryColor"
                            android:text="@string/selling_price" />

                        <EditText android:inputType="number" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
            <!-- /product info container -->

            <!-- sold by area -->
            <TableLayout
                android:id="@+id/salesmanSpinnerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_below="@+id/linearLayout"
                android:layout_marginBottom="10dp">

                <TableRow>
                    <TextView
                        android:text="Sold By"
                        android:padding="3dp"
                        android:layout_gravity="center"
                        android:textColor="@color/primaryColor"
                        />
                    <Spinner
                        android:id="@+id/salesmanSpinner"
                        />
                </TableRow>

            </TableLayout>
            <!-- / sold by area -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/done"
                android:text="@string/done"
                android:textColor="@color/iconColor"
                android:background="@drawable/primary_button"
                android:layout_below="@id/salesmanSpinnerContainer" />

        </RelativeLayout>

    </ScrollView>
