<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackerkernel.storemanager.HomeActivity"
    android:orientation="vertical">

    <!-- toolbar -->
    <include android:id="@+id/toolbar" layout="@layout/tool_bar"/>
    <!-- / toolbar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            android:id="@+id/pName"
            android:hint="@string/product_name"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:inputType="number"
            android:id="@+id/pSize"
            android:hint="@string/size"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/pSearch"
            android:text="@string/search"/>

    </LinearLayout>


</LinearLayout>
